partie test techniques : le test controlleur et voin service  fonctionnent  bien maintenant